Fix Module's scrollbar issue
- Just use overflow-y: scroll

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1506,7 +1506,7 @@ button,
   height: 85%;
   margin: 0;
   padding: 0;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 .modal-content.modal-custom {
   height: auto;
